--- a/historie.html
+++ b/historie.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="AMOs historie gennem tiden">
+    <meta name="keywords" content="AMO, hvedemel, bagning, madlavning, mel, historie, amo 1928, amo 2021">
+    <meta name="author" content="Martin Elsborg">  
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 
@@ -18,11 +21,11 @@
         <a href="index.html"><img class="logo" src="logo.png" alt=""></a>
 
         <ul>
-            <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="bæredygtighed.html">Bæredygtighed</a></li>
-            <li><a href="historie.html">Historie</a></li>
-            <li><a href="produkter.html">Produkter</a></li>
-            <li><a href="opskrifter.html">Opskrifter</a></li>
+            <li><a class="active" href="index.html" aria-label="Fører til frontsiden">Hjem</a></li>
+            <li><a href="bæredygtighed.html" aria-label="Fører til bæredygtigheds siden">Bæredygtighed</a></li>
+            <li><a href="historie.html" aria-label="Fører til historie siden">Historie</a></li>
+            <li><a href="produkter.html" aria-label="Fører til produkt siden">Produkter</a></li>
+            <li><a href="opskrifter.html" aria-label="Fører til opskrift siden">Opskrifter</a></li>
         </ul>
     </nav>
 
@@ -33,7 +36,6 @@
         <img class="web" src="images/wheatfieldWeb.jpg" alt="En hvedemark">
 
     </section>
-
     <div class="historieSkrift">
         <h1>AMO Historie</h1>
         <p>AMO's historie går langt tilbage og AMO er i dag en af de største melproducenter i Danmark</p>
@@ -86,6 +88,7 @@ krav og ønsker, som hjemmebagere har fået.
         </div>
 
     </section>
+
 
     <footer>
         <div class="social">
