--- a/bæredygtighed.html
+++ b/bæredygtighed.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Bæredygtighed er vigtigt for AMO mærket">
+    <meta name="keywords" content="AMO, hvedemel, bagning, madlavning, mel, bæredygtighed, genanvendelig, co2neutral">
+    <meta name="author" content="Martin Elsborg">  
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 
@@ -18,11 +21,11 @@
         <a href="index.html"><img class="logo" src="logo.png" alt=""></a>
 
         <ul>
-            <li><a href="index.html">Hjem</a></li>
-            <li><a href="bæredygtighed.html">Bæredygtighed</a></li>
-            <li><a href="historie.html">Historie</a></li>
-            <li><a href="produkter.html">Produkter</a></li>
-            <li><a href="opskrifter.html">Opskrifter</a></li>
+            <li><a class="active" href="index.html" aria-label="Fører til frontsiden">Hjem</a></li>
+            <li><a href="bæredygtighed.html" aria-label="Fører til bæredygtigheds siden">Bæredygtighed</a></li>
+            <li><a href="historie.html" aria-label="Fører til historie siden">Historie</a></li>
+            <li><a href="produkter.html" aria-label="Fører til produkt siden">Produkter</a></li>
+            <li><a href="opskrifter.html" aria-label="Fører til opskrift siden">Opskrifter</a></li>
         </ul>
     </nav>
 
