--- a/produkter.html
+++ b/produkter.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="AMO hvedemel produkter">
+    <meta name="keywords" content="AMO, hvedemel, bagning, madlavning, mel">
+    <meta name="author" content="Martin Elsborg">  
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 
@@ -18,12 +21,12 @@
         <a href="index.html"><img class="logo" src="logo.png" alt=""></a>
 
         <ul>
-            <li><a href="index.html">Hjem</a></li>
-            <li><a href="bæredygtighed.html">Bæredygtighed</a></li>
-            <li><a href="historie.html">Historie</a></li>
-            <li><a href="produkter.html">Produkter</a></li>
-            <li><a href="opskrifter.html">Opskrifter</a></li>
-        </ul>
+          <li><a class="active" href="index.html" aria-label="Fører til frontsiden">Hjem</a></li>
+          <li><a href="bæredygtighed.html" aria-label="Fører til bæredygtigheds siden">Bæredygtighed</a></li>
+          <li><a href="historie.html" aria-label="Fører til historie siden">Historie</a></li>
+          <li><a href="produkter.html" aria-label="Fører til produkt siden">Produkter</a></li>
+          <li><a href="opskrifter.html" aria-label="Fører til opskrift siden">Opskrifter</a></li>
+      </ul>
     </nav>
 
 
@@ -34,7 +37,7 @@
     </section>
 
     <section class="produkterTitle">
-        <h1>AMO Hvedemel Produkter</h1>
+        <h1>AMO hvedemel Produkter</h1>
     </section>
 
 
@@ -44,7 +47,7 @@
             <img class="web" src="images/melpakkeWeb.jpg" alt="Amo Hvedemel">
         </div>
         <div class="infoContainer">
-            <h2>Dansk Hvedemel</h2>
+            <h2>Dansk hvedemel</h2>
             <p>Amo Hvedemel er mel af meget høj kvalitet,
                 som giver en smidig og spændstig dej og
                 stort brødvolumen.</p>
@@ -103,7 +106,7 @@
     </section>
 
     <section class="buyHere">
-        <h2>Køb Amo Hvedemel her</h2>
+        <h2>Køb Amo hvedemel her</h2>
         <div class="buyContainer">
             <img class="mobile" src="images/DagrofaMobile.jpg" alt="Meny logo">
             <img class="web" src="images/DagrofaWeb.jpg" alt="Meny logo">
