--- a/historie.html
+++ b/historie.html
@@ -72,14 +72,10 @@
         <div class="tekstHistorie">
             <h1>Amo i dag</h1>
             <p>
-                Den dag i dag er Amo fortsat et af de førende
-mærker indenfor hvedemel, hvilket i høj grad
-skyldes produktets kvalitet. Amo har nemlig altid
-været det hvedemel, som har kunnet hjælpe
-hjemmebagere med at sikre det gode bageresultat.
-Men samtidig har Amo også forstået at følge med
-tiden, så vi hele tiden har kunnet leve op til de nye
-krav og ønsker, som hjemmebagere har fået.
+                På trods af Amos succes har hvedemelsmærket stadig en stærk markedsposition på grund
+af sin høje kvalitet. Amos kvalitet har gjort det muligt for hjemmebagere at opnå deres bedste bageresultater.
+Vi har altid forstået at følge med tiden og har faktisk kunnet leve op til de nye krav og ønsker,
+som hjemmebagerene er kommet med. AMO mærket har taget næste skridt og er begyndt at anvende genanvendelig indpaking af produkterne.
             </p>
         </div>
         <div class="historieImage">
