små fejl rettet

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <a href="bæredygtighed.html">læs mere</a>
                     </div>
                 </div>
-
+                </div>
         </section>
     </section>
 
@@ -88,7 +88,7 @@
                         <a href="historie.html">læs mere</a>
                     </div>
                 </div>
-
+                </div>
         </section>
     </section>
 
@@ -109,7 +109,7 @@
                         <a href="opskrifter.html">Se opskrifter</a>
                     </div>
                 </div>
-
+                </div>
         </section>
     </section>
 
