rettelser på opskrift siden

--- a/opskrifter.html
+++ b/opskrifter.html
@@ -70,7 +70,7 @@
 
         <div class="opskriftCard">
             <div class="opskriftBody">
-                <img src="images/sourdoughMobile.jpg" alt="" class="opskriftImage">
+                <img src="images/sourdoughMobile.jpg" alt="Surdejsbrød" class="opskriftImage">
                 <h2 class="opskriftOverskrift">Surdejsbrød</h2>
             </div>
             <button class="opskriftBtn">Se opskrift</button>
@@ -78,7 +78,7 @@
 
         <div class="opskriftCard">
             <div class="opskriftBody">
-                <img src="images/crossaint.jpg" alt="" class="opskriftImage">
+                <img src="images/crossaint.jpg" alt="En crossaint" class="opskriftImage">
                 <h2 class="opskriftOverskrift">Crossainter</h2>
             </div>
             <button class="opskriftBtn">Se opskrift</button>
@@ -87,7 +87,7 @@
 
         <div class="opskriftCard">
             <div class="opskriftBody">
-                <img src="images/pancakes.jpg" alt="" class="opskriftImage">
+                <img src="images/pancakes.jpg" alt="Pandekager" class="opskriftImage">
                 <h2 class="opskriftOverskrift">Amerikanske Pandekager</h2>
             </div>
             <button class="opskriftBtn">Se opskrift</button>
@@ -96,7 +96,7 @@
 
         <div class="opskriftCard">
             <div class="opskriftBody">
-                <img src="images/cookies.jpg" alt="" class="opskriftImage">
+                <img src="images/cookies.jpg" alt="Cookies" class="opskriftImage">
                 <h2 class="opskriftOverskrift">Cookies med chokoladestykker</h2>
             </div>
             <button class="opskriftBtn">Se opskrift</button>
@@ -105,7 +105,7 @@
 
         <div class="opskriftCard">
             <div class="opskriftBody">
-                <img src="images/muffin.jpg" alt="" class="opskriftImage">
+                <img src="images/muffin.jpg" alt="Muffins" class="opskriftImage">
                 <h2 class="opskriftOverskrift">Blåbær Muffins</h2>
             </div>
             <button class="opskriftBtn">Se opskrift</button>
