--- a/produkter.html
+++ b/produkter.html
@@ -9,9 +9,10 @@
   <meta name="keywords" content="AMO, hvedemel, bagning, madlavning, mel">
   <meta name="author" content="Martin Elsborg">
   <link rel="stylesheet" href="css/stylesheet.css">
+  <link rel="icon" type="image/x-icon" href="images/favicon.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
-  <title>Document</title>
+  <title>Produkter</title>
 </head>
 
 <body>
@@ -121,11 +122,11 @@
 
   <footer>
     <div class="social">
-      <a href="www.instagram.com"><i class="fab fa-instagram"></i></a>
-      <a href="www.facebook.com"><i class="fab fa-facebook"></i></a>
-      <a href="www.youtube.com"><i class="fab fa-youtube"></i></a>
-      <a href="www.pinterest.com"><i class="fab fa-pinterest"></i></a>
-    </div>
+      <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+      <a href="https://facebook.com/"><i class="fab fa-facebook"></i></a>
+      <a href="https://youtube.com/"><i class="fab fa-youtube"></i></a>
+      <a href="https://pinterest.com/"><i class="fab fa-pinterest"></i></a>
+  </div>
 
     <hr class="lineFooter">
     <p class="copyright">
