--- a/opskrifter.html
+++ b/opskrifter.html
@@ -9,9 +9,10 @@
     <meta name="keywords" content="AMO, hvedemel, bagning, opskrift, opskrifter, inspiration, madlavning, mel">
     <meta name="author" content="Martin Elsborg">
     <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
-    <title>Document</title>
+    <title>Opskrifter</title>
 </head>
 
 <body>
@@ -49,7 +50,7 @@
                 <img src="images/cookiesglassurMobile.jpg" alt="Honningkager med glassur" class="opskriftImage">
                 <h2 class="opskriftOverskrift">Honningkager med glassur</h2>
             </div>
-            <button class="opskriftBtn">Se opskrift</button>
+            <button class="opskriftBtn"> <a href="opskrift.html">Se opskrift </a></button>
         </div>
 
         <div class="opskriftCard">
@@ -57,7 +58,7 @@
                 <img src="images/brownies.jpg" alt="Brownies" class="opskriftImage">
                 <h2 class="opskriftOverskrift">Brownies</h2>
             </div>
-            <button class="opskriftBtn">Se opskrift</button>
+            <button class="opskriftBtn"><a href="opskrift.html">Se opskrift </a></button>
         </div>
 
         <div class="opskriftCard">
@@ -65,7 +66,7 @@
                 <img src="images/pizzadej.jpg" alt="Pizzadej" class="opskriftImage">
                 <h2 class="opskriftOverskrift">Italiensk Pizzadej</h2>
             </div>
-            <button class="opskriftBtn">Se opskrift</button>
+            <button class="opskriftBtn"><a href="opskrift.html">Se opskrift </a></button>
         </div>
 
         <div class="opskriftCard">
@@ -73,7 +74,7 @@
                 <img src="images/sourdoughMobile.jpg" alt="Surdejsbrød" class="opskriftImage">
                 <h2 class="opskriftOverskrift">Surdejsbrød</h2>
             </div>
-            <button class="opskriftBtn">Se opskrift</button>
+            <button class="opskriftBtn"><a href="opskrift.html">Se opskrift </a></button>
         </div>
 
         <div class="opskriftCard">
@@ -81,7 +82,7 @@
                 <img src="images/crossaint.jpg" alt="En crossaint" class="opskriftImage">
                 <h2 class="opskriftOverskrift">Crossainter</h2>
             </div>
-            <button class="opskriftBtn">Se opskrift</button>
+            <button class="opskriftBtn"><a href="opskrift.html">Se opskrift </a></button>
         </div>
 
 
@@ -90,7 +91,7 @@
                 <img src="images/pancakes.jpg" alt="Pandekager" class="opskriftImage">
                 <h2 class="opskriftOverskrift">Amerikanske Pandekager</h2>
             </div>
-            <button class="opskriftBtn">Se opskrift</button>
+            <button class="opskriftBtn"><a href="opskrift.html">Se opskrift </a></button>
         </div>
 
 
@@ -99,7 +100,7 @@
                 <img src="images/cookies.jpg" alt="Cookies" class="opskriftImage">
                 <h2 class="opskriftOverskrift">Cookies med chokoladestykker</h2>
             </div>
-            <button class="opskriftBtn">Se opskrift</button>
+            <button class="opskriftBtn"><a href="opskrift.html">Se opskrift </a></button>
         </div>
 
 
@@ -108,16 +109,16 @@
                 <img src="images/muffin.jpg" alt="Muffins" class="opskriftImage">
                 <h2 class="opskriftOverskrift">Blåbær Muffins</h2>
             </div>
-            <button class="opskriftBtn">Se opskrift</button>
+            <button class="opskriftBtn"><a href="opskrift.html">Se opskrift </a></button>
         </div>
     </section>
 
     <footer>
         <div class="social">
-            <a href="www.instagram.com"><i class="fab fa-instagram"></i></a>
-            <a href="www.facebook.com"><i class="fab fa-facebook"></i></a>
-            <a href="www.youtube.com"><i class="fab fa-youtube"></i></a>
-            <a href="www.pinterest.com"><i class="fab fa-pinterest"></i></a>
+            <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+            <a href="https://facebook.com/"><i class="fab fa-facebook"></i></a>
+            <a href="https://youtube.com/"><i class="fab fa-youtube"></i></a>
+            <a href="https://pinterest.com/"><i class="fab fa-pinterest"></i></a>
         </div>
 
         <hr class="lineFooter">
