--- a/historie.html
+++ b/historie.html
@@ -63,8 +63,11 @@
             </p>
         </div>
         <div class="historieImage">
+            <figure>
             <img class="mobileHistorie" src="images/dampVictoria.png" alt="Dampmøllen Victoria optegnet">
             <img class="webHistorie" src="images/dampVictoriaWeb.png" alt="Dampmøllen Victoria optegnet">
+            <figcaption> Det originale billede er fra Odense Statsarkiv</figcaption>
+        </figure>
         </div>
 
     </section>
